src/css/weave.css
/* ... */
.weave-ToolEditor-Header .ui.button:hover { /* inline style will override hover state */
	color: black;
	background-color: rgba(0, 0, 0, 0.12);
}



/* Override Semantic ui CSS*/

/******* Breadcrumb *******/

.ui.breadcrumb {
    line-height: normal;
}

/******* Menu *******/

.ui.dropdown .menu>.item {
    line-height: normal;
}

/******* Button *******/
.ui.button {
	border:1px solid lightgrey;
	background-color:#ECECEC;
	color:black;
	font-weight: normal;
	margin:0;/* important to override semantic ui default margin-right value. for special cases use inline style to set */
}

.ui.button:hover {
	background-color: lightgrey;
}

.ui.button:focus {
	background-color: #ECECEC;
	border-color: #85B7D9;
}

/******* Dropdown *****/

.ui.multiple.dropdown>.label {
	display: inline-flex;
	align-items: center;
	background: none;
}

.ui.multiple.dropdown>.label:hover {
	background: lightgrey;
}

.ui.selection.dropdown .menu {
	border-top-style: dashed;
	border-bottom-style: solid;
	border-top-width: 1!important;
}

.ui.upward.selection.dropdown .menu {
	border-top-style: solid;
	border-bottom-style: dashed;
	border-bottom-width: 1!important;
}

/******* grid *********/

.ui.grid {
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-webkit-flex-direction: row;
	-ms-flex-direction: row;
	flex-direction: row;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	-webkit-box-align: center;
	-webkit-align-items: center;
	-ms-flex-align: center;
	align-items: center;
	padding: 0;
	 margin: 0;
}

.ui.grid>* {
	padding-left: 0px;
	padding-right: 8px;
}

.ui.grid>.column:not(.row) {
	padding-top: 4px;
	padding-bottom: 4px;
}

.ui.grid>.column:not(.row), .ui.grid>.row>.column {
	position: relative;
	display: inline-block;
	padding-left: 0px;
	padding-right: 8px;
	vertical-align: middle;
}

.ui.grid>.column:not(.row), .ui.grid>.row>.column {
	position: relative;
	display: inline-block;
	padding-left: 0px;
	padding-right: 8px;
	vertical-align: middle;
}

/****** Accordion *******/
.ui.styled.accordion {
	border-radius: 2px;
	background: none;
	width:100%;
	box-shadow:none;
}

.ui.styled.accordion .title {
	padding: 0px;
	padding-top: 1em;
}

.ui.styled.accordion .content {
	padding: .5em 0em 1em 1em;
}

